--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "helmet": "^3.15.1",
     "faker": "^4.1.0",
-    "pg": "^7.8.2",
+    "helmet": "^3.15.1",
     "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
+    "knex-cleaner": "^1.1.4",
+    "pg": "^7.8.2",
     "sqlite3": "^4.0.6"
   },
   "scripts": {
@@ -23,8 +24,8 @@
     "test": "jest --watch --verbose"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10",
     "jest": "^24.5.0",
+    "nodemon": "^1.18.10",
     "supertest": "^4.0.0"
   }
 }
