--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "helmet": "^3.15.1",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
     "knex-cleaner": "^1.1.4",
@@ -21,9 +22,10 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "jest --watch --verbose"
+    "test": "cross-env DB_ENV=testing jest --watch --verbose"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "jest": "^24.5.0",
     "nodemon": "^1.18.10",
     "supertest": "^4.0.0"
