--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
     "knex-cleaner": "^1.1.4",
+    "morgan": "^1.9.1",
     "pg": "^7.8.2",
     "sqlite3": "^4.0.6"
   },
