--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "faker": "^4.1.0",
     "helmet": "^3.15.1",
     "joi": "^14.3.1",
